--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <button type="button" class="btn">Game rules</button>
         </div>
       </div>
+      <!-- <div class="backdrop"><div class="modal"></div></div> -->
     </section>
     <footer class="footer">By Darymee</footer>
   </body>
