--- a/index.html
+++ b/index.html
@@ -15,47 +15,49 @@
     <title>Treasure Hunt</title>
   </head>
   <body>
-    <section class="section">
-      <h1 class="title">Welcome to the Treasure Hunt!</h1>
-      <div class="wrapper">
-        <img
-          src="./img/map.png"
-          width="1000"
-          height="600"
-          alt="map"
-          class="map"
-        />
-        <div class="info">
-          <p>Hint:<span class="message"> Let's start!</span></p>
-          <p>Clicks:<span class="click"> 0</span></p>
-          <div class="timer">
-            <p class="timer-face">00 : 00 : 00</p>
+    <div class="main-wrapper">
+      <section class="section">
+        <h1 class="title">Welcome to the Treasure Hunt!</h1>
+        <div class="wrapper">
+          <img
+            src="./img/map.png"
+            width="1000"
+            height="600"
+            alt="map"
+            class="map"
+          />
+          <div class="info">
+            <p>Hint:<span class="message"> Let's start!</span></p>
+            <p>Clicks:<span class="click"> 0</span></p>
+            <div class="timer">
+              <p class="timer-face">00 : 00 : 00</p>
+            </div>
+            <button type="button" class="btn-start">Start game</button>
+            <button type="button" class="btn-rules">Game rules</button>
           </div>
-          <button type="button" class="btn-start">Start game</button>
-          <button type="button" class="btn-rules">Game rules</button>
         </div>
-      </div>
-      <div class="backdrop is-hidden">
-        <div class="modal">
-          <button type="button" class="close-btn">
-            <svg
-              style="width: 25px; height: 25px"
-              viewBox="0 0 1024 1024"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M810.65984 170.65984q18.3296 0 30.49472 12.16512t12.16512 30.49472q0 18.00192-12.32896 30.33088l-268.67712 268.32896 268.67712 268.32896q12.32896 12.32896 12.32896 30.33088 0 18.3296-12.16512 30.49472t-30.49472 12.16512q-18.00192 0-30.33088-12.32896l-268.32896-268.67712-268.32896 268.67712q-12.32896 12.32896-30.33088 12.32896-18.3296 0-30.49472-12.16512t-12.16512-30.49472q0-18.00192 12.32896-30.33088l268.67712-268.32896-268.67712-268.32896q-12.32896-12.32896-12.32896-30.33088 0-18.3296 12.16512-30.49472t30.49472-12.16512q18.00192 0 30.33088 12.32896l268.32896 268.67712 268.32896-268.67712q12.32896-12.32896 30.33088-12.32896z"
-              />
-            </svg>
-          </button>
-          <h2 class="modal-title"></h2>
-          <ol class="rules-list"></ol>
-          <p class="modal-text"></p>
+        <div class="backdrop is-hidden">
+          <div class="modal">
+            <button type="button" class="close-btn">
+              <svg
+                style="width: 25px; height: 25px"
+                viewBox="0 0 1024 1024"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M810.65984 170.65984q18.3296 0 30.49472 12.16512t12.16512 30.49472q0 18.00192-12.32896 30.33088l-268.67712 268.32896 268.67712 268.32896q12.32896 12.32896 12.32896 30.33088 0 18.3296-12.16512 30.49472t-30.49472 12.16512q-18.00192 0-30.33088-12.32896l-268.32896-268.67712-268.32896 268.67712q-12.32896 12.32896-30.33088 12.32896-18.3296 0-30.49472-12.16512t-12.16512-30.49472q0-18.00192 12.32896-30.33088l268.67712-268.32896-268.67712-268.32896q-12.32896-12.32896-12.32896-30.33088 0-18.3296 12.16512-30.49472t30.49472-12.16512q18.00192 0 30.33088 12.32896l268.32896 268.67712 268.32896-268.67712q12.32896-12.32896 30.33088-12.32896z"
+                />
+              </svg>
+            </button>
+            <h2 class="modal-title"></h2>
+            <ol class="rules-list"></ol>
+            <p class="modal-text"></p>
+          </div>
         </div>
-      </div>
-    </section>
-    <footer class="footer">By Darymee</footer>
+      </section>
+      <footer class="footer">By Darymee</footer>
+    </div>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
