--- a/index.html
+++ b/index.html
@@ -59,5 +59,5 @@
       <footer class="footer">By Darymee</footer>
     </div>
   </body>
-  <script src="./index.js" type="module"></script>
+  <script src="./js/index.js" type="module"></script>
 </html>
